--- a/credits.html
+++ b/credits.html
@@ -11,12 +11,9 @@
                 background-image: url(aaa.png); background-size: cover;
             }
         </style>
-        <h1>Welcome to Cinna.Bon.Zone</h1>
-        <h3>This site is being worked on, Everything is subject to change.
-            <br>
-            (Including this iframe page)
-        </h3>
-
-        <p>For now, click/tap on the links on the side.</p>
+        <h1>Credits</h1>
+        <p><b>Everything used on this site may or may not be mine in a anyway, thats why this page exist.</b></p>
+        <br>
+        <p><a href="https://kwaamfan.neocities.org/main/?z=/main/main">Kwaamfan</a> | used the <a href="https://kwaamfan.neocities.org/codes/pictochat/">pictochat template</a></p>
     </body>
 </html>
