--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <br>
         <a style="text-decoration:none; color:rgb(0, 0, 0);" ;="" target="MAIN" href="info.html">Info</a>
         <br>
-        <a style="text-decoration:none; color:rgb(0, 0, 0);" ;="" target="MAIN" href="404.html">N/A</a>
+        <a style="text-decoration:none; color:rgb(0, 0, 0);" ;="" target="MAIN" href="projects.html">Projects</a>
+        <br>
+        <a style="text-decoration:none; color:rgb(0, 0, 0);" ;="" target="MAIN" href="D:\Cinna-Bon-Zone site folder\pictochat-main\pictochat-main\index.html">Blog</a>
         <br>
         <a style="text-decoration:none; color:rgb(0, 0, 0);" ;="" target="MAIN" href="404.html">N/A</a>
         <br>
@@ -39,9 +41,7 @@
         <br>
         <a style="text-decoration:none; color:rgb(0, 0, 0);" ;="" target="MAIN" href="404.html">N/A</a>
         <br>
-        <a style="text-decoration:none; color:rgb(0, 0, 0);" ;="" target="MAIN" href="404.html">N/A</a>
-        <br>
-        <a style="text-decoration:none; color:rgb(0, 0, 0);" ;="" target="MAIN" href="404.html">N/A</a>
+        <a style="text-decoration:none; color:rgb(0, 0, 0);" ;="" target="MAIN" href="credits.html">Credits</a>
         <div style="border-style: solid; border-color: white; border-radius: 10px; width: 1110px; height: 550px; margin-top: -350px; margin-left: 180px;">
             <iframe src="IFMAIN.html" name="MAIN" style="height: 100%; width: 100%; border-style: none;">
             </iframe>
