--- a/projects.html
+++ b/projects.html
@@ -11,12 +11,6 @@
                 background-image: url(aaa.png); background-size: cover;
             }
         </style>
-        <h1>Welcome to Cinna.Bon.Zone</h1>
-        <h3>This site is being worked on, Everything is subject to change.
-            <br>
-            (Including this iframe page)
-        </h3>
-
-        <p>For now, click/tap on the links on the side.</p>
+        <h1>No projects currnetly</h1>
     </body>
 </html>
